[gd_scene load_steps=14 format=3 uid="uid://br6ornbfmuj7l"]

[ext_resource type="Script" uid="uid://cj82y7wjxiftj" path="res://scenes/gameplay/hud/funkin_hud.gd" id="1_rn3fp"]
[ext_resource type="StyleBox" uid="uid://bb871j4np30b4" path="res://scenes/gameplay/hud/styleboxes/health_bar_left.tres" id="2_os6l6"]
[ext_resource type="StyleBox" uid="uid://bdag5e631yhvt" path="res://scenes/gameplay/hud/styleboxes/health_bar_right.tres" id="3_cjywq"]
[ext_resource type="Texture2D" uid="uid://d3x8spahvh1je" path="res://assets/game/characters/face/icon.png" id="4_bkydb"]
[ext_resource type="FontFile" uid="uid://ddfumfkyfy17s" path="res://assets/ui/fonts/vcr.ttf" id="5_bpiwt"]
[ext_resource type="Script" uid="uid://dxoh2eni26dvh" path="res://scenes/gameplay/hud/combo_group.gd" id="6_w8rm7"]
[ext_resource type="PackedScene" uid="uid://d0a6dlj2togbt" path="res://scenes/gameplay/playfield/strum/4k.tscn" id="7_1ey6q"]
[ext_resource type="Script" uid="uid://cfnk73c6iyf2s" path="res://scenes/gameplay/playfield/player/botplay.gd" id="8_ix870"]
[ext_resource type="Script" uid="uid://dp7ul3erh1ciu" path="res://scenes/gameplay/playfield/player/player.gd" id="9_meife"]
[ext_resource type="Texture2D" uid="uid://cw3h68ylrq7fy" path="res://assets/ui/countdown/prepare.png" id="10_ikv3y"]
[ext_resource type="AudioStream" uid="uid://cs4y7h8cnhhwm" path="res://assets/sounds/countdown/funkin/3.ogg" id="11_awxy1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_it28e"]
bg_color = Color(0, 0, 0, 1)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_it28e"]
font = ExtResource("5_bpiwt")
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="funkin_hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rn3fp")
keep_classic_health_colors = true

[node name="health_bar" type="ProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -295.5
offset_top = -60.0
offset_right = 294.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = ExtResource("2_os6l6")
theme_override_styles/fill = ExtResource("3_cjywq")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="panel" type="Panel" parent="health_bar"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008
anchor_right = 1.01
anchor_bottom = 1.5
offset_left = -0.272
offset_top = -5.0
offset_right = 0.0900269
theme_override_styles/panel = SubResource("StyleBoxFlat_it28e")
metadata/_edit_lock_ = true

[node name="icon_p1" type="Sprite2D" parent="health_bar"]
position = Vector2(321, 15)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_bkydb")
flip_h = true
hframes = 2

[node name="icon_p2" type="Sprite2D" parent="health_bar"]
position = Vector2(267, 15)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_bkydb")
hframes = 2

[node name="score_text" type="Label" parent="health_bar"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.002
anchor_top = -0.48
anchor_right = 1.012
anchor_bottom = 1.486
offset_left = 451.18
offset_top = 28.8
offset_right = -72.08
offset_bottom = 24.14
grow_horizontal = 2
grow_vertical = 2
text = "Score: 0"
label_settings = SubResource("LabelSettings_it28e")
horizontal_alignment = 1

[node name="misses_text" type="Label" parent="health_bar"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.002
anchor_top = -0.48
anchor_right = 1.012
anchor_bottom = 1.486
offset_left = 66.18
offset_top = 28.8
offset_right = -457.08
offset_bottom = 24.14
grow_horizontal = 2
grow_vertical = 2
text = "Combo Breaks: 0"
label_settings = SubResource("LabelSettings_it28e")
horizontal_alignment = 1

[node name="combo_group" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
script = ExtResource("6_w8rm7")

[node name="judgement" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit0" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit1" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit2" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="combo_digit3" type="Sprite2D" parent="combo_group"]
metadata/velocity = Vector2(0, 0)
metadata/acceleration = Vector2(0, 0)

[node name="countdown" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="sprite" type="Sprite2D" parent="countdown"]
visible = false
position = Vector2(640, 360)
scale = Vector2(0.7, 0.7)
texture = ExtResource("10_ikv3y")

[node name="sound" type="AudioStreamPlayer" parent="countdown"]
stream = ExtResource("11_awxy1")
max_polyphony = 5

[node name="timer" type="Timer" parent="countdown"]
one_shot = true

[node name="note_fields" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="left_notes" parent="note_fields" instance=ExtResource("7_1ey6q")]
position = Vector2(142, 105)

[node name="player" type="Node" parent="note_fields/left_notes"]
script = ExtResource("8_ix870")

[node name="right_notes" parent="note_fields" instance=ExtResource("7_1ey6q")]
position = Vector2(797, 105)

[node name="player" type="Node" parent="note_fields/right_notes"]
script = ExtResource("9_meife")
